[tool.poetry]
name = "sample-chatapp"
version = "0.1.0"
description = ""
authors = ["tak-akashi <tak.akashi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
langchain = "^0.3.0"
langchain-google-genai = "^2.0.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
